--- a/pallets/pallet-ocw/Cargo.toml
+++ b/pallets/pallet-ocw/Cargo.toml
@@ -32,7 +32,7 @@ serde_json = { version = '1.0.67', default-features = false, features = ['alloc'
 
 [dev-dependencies]
 sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
-
+pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
 
 [features]
 default = ["std"]
