Fix - duplicate submit price.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 
 members = [
     "pallets/pallet-ocw",
+    "pallets/ocw-finance",
     "pallets/staking-extend",
     "pallets/member-extend",
     "pallets/challenge",
