--- a/pallets/member-extend/Cargo.toml
+++ b/pallets/member-extend/Cargo.toml
@@ -2,11 +2,11 @@
 authors = ['kami']
 description = 'Member Extend'
 edition = '2018'
-homepage = 'https://substrate.dev'
 license = 'Unlicense'
 name = 'member-extend'
 publish = false
-repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
+homepage = "https://github.com/aresprotocols"
+repository = "https://github.com/aresprotocols/ocw-suit"
 version = '3.0.3'
 readme = 'README.md'
 
