--- a/pallets/pallet-ocw/Cargo.toml
+++ b/pallets/pallet-ocw/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-ocw"
-version = "3.2.4"
+version = "3.2.5"
 authors = ["Ares Technologies <linhai@cancanyou.com>"]
 edition = "2018"
 license = "Unlicense"
@@ -30,6 +30,8 @@ serde_json = { version = '1.0.67', default-features = false, features = ['alloc'
 pallet-aura = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-09+1" }
 pallet-session = { version = "4.0.0-dev", features = ["historical"], default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-09+1" }
 sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
+ocw-finance = { version = "3.0.1", default-features = false, path="../ocw-finance" }
+pallet-balances = {  version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-09+1" }
 
 [dev-dependencies]
 sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-09+1" }
@@ -57,5 +59,7 @@ std = [
 	"pallet-aura/std",
 	"pallet-session/std",
 	"sp-consensus-aura/std",
+	"pallet-balances/std",
+	"ocw-finance/std",
 ]
 try-runtime = ["frame-support/try-runtime"]
