--- a/pallets/price-estimates/Cargo.toml
+++ b/pallets/price-estimates/Cargo.toml
@@ -29,7 +29,8 @@ frame-system = { version = "4.0.0-dev", default-features = false, git = 'https:/
 frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
 sp-runtime = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git',tag = 'monthly-2021-09+1'}
 pallet-ocw =  {default-features = false, path = '../pallet-ocw'}
-#rust-crypto = "^0.2"
+rust-crypto = "^0.2"
+hex = "0.4.3"
 # -- snip --
 
 [features]
