--- a/pallets/staking-extend/Cargo.toml
+++ b/pallets/staking-extend/Cargo.toml
@@ -27,6 +27,7 @@ log = { version = "0.4.14", default-features = false }
 pallet-authorship = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-09+1" }
 pallet-session = { version = "4.0.0-dev", features = ["historical"], default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-09+1" }
 sp-application-crypto = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-09+1" }
+frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-09+1" }
 serde = { version = '1.0.130', default-features = false, features = ['derive'] }
 serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }
 
@@ -49,6 +50,7 @@ std = [
     "log/std",
     "pallet-authorship/std",
     "pallet-session/std",
+    "frame-election-provider-support/std",
 ]
 try-runtime = ["frame-support/try-runtime"]
 
