Rename pallet pallet-ocw => ares-oracle, ocw-finance => oracle-finance

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 resolver = "2"
 
 members = [
-    "pallets/pallet-ocw",
-    "pallets/ocw-finance",
+    "pallets/ares-oracle",
+    "pallets/oracle-finance",
     "pallets/staking-extend",
     "pallets/member-extend",
     "pallets/challenge",
