--- a/pallets/oracle-finance/Cargo.toml
+++ b/pallets/oracle-finance/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 authors = ["Ares Technologies <linhai@cancanyou.com>"]
-description = 'Ocw Finance.'
+description = 'Ares Oracle Finance.'
 edition = '2018'
 license = 'MIT'
-name = 'ocw-finance'
+name = 'oracle-finance'
 readme = 'README.md'
 homepage = "https://github.com/aresprotocols"
 repository = "https://github.com/aresprotocols/ocw-suit"
-version = '3.0.4'
+version = '3.1.0'
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
 
