--- a/pallets/price-estimates/Cargo.toml
+++ b/pallets/price-estimates/Cargo.toml
@@ -28,7 +28,7 @@ frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = 'h
 frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
 frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
 sp-runtime = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git',tag = 'monthly-2021-09+1'}
-pallet-ocw =  {default-features = false, path = '../pallet-ocw'}
+ares-oracle =  {default-features = false, path = '../ares-oracle' }
 #rust-crypto = "^0.2"
 # -- snip --
 
@@ -42,6 +42,6 @@ std = [
     'frame-system/std',
     'frame-benchmarking/std',
     "sp-runtime/std",
-    "pallet-ocw/std",
+    "ares-oracle/std",
 ]
 try-runtime = ['frame-support/try-runtime']
