modify trait SymbolInfo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ members = [
     "pallets/member-extend",
     "pallets/challenge",
     "pallets/collective",
-    "pallets/price-estimates"
+    "pallets/price-estimates",
 ]
