Update version to 0.9.13

--- a/pallets/staking-extend/Cargo.toml
+++ b/pallets/staking-extend/Cargo.toml
@@ -46,6 +46,8 @@ pallet-session = { features = ["historical"], default-features = false, path = "
 
 [dev-dependencies]
 serde = { version = '1.0.130'}
+sp-npos-elections = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.13" }
+pallet-bags-list = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.13" }
 
 [features]
 default = ["std"]
